fix page transitions
if a summarization is not found, show some error text
fix truncator width issue with white-space
make history page items more accessible (aria-label)
make border-radii the same (m/l don't matter)

--- a/packages/falafel/static/styles/theme.css
+++ b/packages/falafel/static/styles/theme.css
@@ -3,11 +3,13 @@
     --bg-l1: hsl(0, 0%, 97%);
     --bg-l2: hsl(0, 0%, 92%);
     --bg-l3: hsl(0, 0%, 88%);
-    --border: hsl(0 0% 79%);
-    --border-focus: hsl(0 0% 60%);
+    --border: hsl(0 0% 50%);
+    --border-focus: hsl(0 0% 20%);
     --fg-l2: hsl(0 0% 50%);
     --fg-l1: hsl(0 0% 25%);
     --fg-l0: hsl(0 0% 0%);
+
+    --fg-error: hsl(0 30% 50%);
 
     --accent-1: hsl(281, 100%, 52%);
     --accent-2: hsl(266, 100%, 52%);
@@ -17,8 +19,8 @@
 
     --shadow: 0px 10px 16px 0px hsla(0, 0%, 0%, 0.06);
 
-    --radius-l: calc(var(--radius-m) * 2);
-    --radius-m: 12px;
+    --radius-l: 18px;
+    --radius-m: 18px;
 
     --font-family: Instrument Sans, system-ui, sans-serif;
     --font-heading: 700 clamp(1.4rem, calc(1rem + 3vw), 4rem) var(--font-family);
